deploy/kustomize/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-wiki-app
  namespace: jason-lab
spec:
  selector:
    matchLabels:
      app: go-wiki-app
  replicas: 3
  template:
    metadata:
      labels:
        app: go-wiki-app
    spec:
      containers:
      - name: go-wiki-app
        image: json0/go-reference-app
        ports:
        - containerPort: 8082
