deploy/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-wiki-app
  namespace: jason-lab
  labels:
    app: go-wiki-app
spec:
  ports:
  - port: 4000
    name: http
    targetPort: 8082
  selector:
    app: go-wiki-app
